--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Reportviewerapp</title>
-  <base href="/">
+  <base href="https://sridharmanikandan.github.io/testing-pub/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Data-Visualization -->
@@ -14,8 +14,8 @@
 <script src="https://cdn.boldreports.com/3.2.25/scripts/data-visualization/ej2-lineargauge.min.js"></script>
 <script src="https://cdn.boldreports.com/3.2.25/scripts/data-visualization/ej2-circulargauge.min.js"></script>
 <script src="https://cdn.boldreports.com/3.2.25/scripts/data-visualization/ej2-maps.min.js"></script>
-</head>
+<link rel="stylesheet" href="styles.ef3a02ee3d992884a1e8.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
+<script src="runtime.acf0dec4155e77772545.js" defer></script><script src="polyfills.8daa4d9ed523be030085.js" defer></script><script src="main.8d3a4d93cc37065f15b1.js" defer></script></body>
 </html>
