feature(REPORT-9752): initial-testing

--- a/angular/index.html
+++ b/angular/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Reportviewerapp</title>
-  <base href="https://sridharmanikandan.github.io/testing-pub/">
+  <base href="https://sridharmanikandan.github.io/testing-pub/angular/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Data-Visualization -->
